tests/compile_fail/ktstr_test_bpf_map_write_not_path.stderr
error: expected path for bpf_map_write (e.g. BPF_CRASH)
 --> tests/compile_fail/ktstr_test_bpf_map_write_not_path.rs:6:30
  |
6 | #[ktstr_test(bpf_map_write = 42)]
  |                              ^^

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_bpf_map_write_not_path.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_bpf_map_write_not_path.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_bpf_map_write_not_path.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
